# Budgie-FancyName-Applet

./: MyFancyApplet.plugin  MyFancyApplet.py.in  README.md  com.solus.budgie-fancyname.gschema.xml  meson.build
